Handle all the navigation issue (avoid refreshing the page when jumping to another page)

--- a/src/index.css
+++ b/src/index.css
@@ -42,21 +42,19 @@ body {
   width: 100%;
   color: var(--text-corlor2);
   text-decoration: none;
-}
-
-.navbar div.active {
   position: relative;
 }
 
-.navbar div.active::after {
+.navbar a.active::after {
   content: '';
   position: absolute;
   left: 0;
-  bottom: -3px; 
-  width: 100%;
-  height: 3px; 
+  bottom: 0;
+  width: 100%; 
+  height: 3px;
   background-color: var(--background-color2); 
 }
+
 
 /* Home page */
 .title {
